2021-09-14  Claudiu Zissulescu  <claziss@synopsys.com>

	* ld-arc/got-weak.d: New file.
	* ld-arc/got-weak.s: Likewise.

2021-07-26  Roland McGrath  <mcgrathr@google.com>

	* testsuite/ld-x86-64/x86-64.exp (Build textrel-1): Use --warn-textrel.

2021-07-06  Michael Matz  <matz@suse.de>

	PR ld/28021
	* testsuite/ld-riscv-elf/relax-twice.ver: New.
	* testsuite/ld-riscv-elf/relax-twice-1.s: New.
	* testsuite/ld-riscv-elf/relax-twice-2.s: New.
	* testsuite/ld-riscv-elf/ld-riscv-elf.exp
	(run_relax_twice_test): New, and call it.

2021-07-03  Nick Clifton  <nickc@redhat.com>

	* configure: Regenerate.
	* po/ld.pot: Regenerate.

2021-07-03  Nick Clifton  <nickc@redhat.com>

	* 2.37 release branch created.

2021-06-22  Nelson Chu  <nelson.chu@sifive.com>

	* testsuite/ld-riscv-elf/ld-riscv-elf.exp: Updated.
	* testsuite/ld-riscv-elf/pcrel-lo-addend-3a.d: New testcase.
	* testsuite/ld-riscv-elf/pcrel-lo-addend-3a.s: Likewise.
	* testsuite/ld-riscv-elf/pcrel-lo-addend-3b.d: New testcase.
	Should report error since the %pcrel_lo with addend refers to
	%got_pcrel_hi.
	* testsuite/ld-riscv-elf/pcrel-lo-addend-3b.s: Likewise.
	* testsuite/ld-riscv-elf/pcrel-lo-addend-3c.d: New testcase.
	Should report error since the %got_pcrel_hi with addend.
	* testsuite/ld-riscv-elf/pcrel-lo-addend-3c.s: Likewise.
	* testsuite/ld-riscv-elf/pcrel-lo-addend-3.ld: Likewise.

2021-06-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/27998
	* testsuite/ld-i386/i386.exp: Run PR ld/27998 tests.
	* testsuite/ld-i386/pr27998a.d: New file.
	* testsuite/ld-i386/pr27998a.s: Likewise.
	* testsuite/ld-i386/pr27998b.d: Likewise.
	* testsuite/ld-i386/pr27998b.s: Likewise.

2021-06-19  H.J. Lu  <hongjiu.lu@intel.com>

	* testsuite/ld-x86-64/textrel-1.err: New file.
	* testsuite/ld-x86-64/textrel-1a.s: Likewise.
	* testsuite/ld-x86-64/textrel-1b.s: Likewise.
	* testsuite/ld-x86-64/x86-64.exp: Run textrel-1 tests.

2021-06-18  H.J. Lu  <hongjiu.lu@intel.com>
