@@ -3,10 +3,10 @@
 #ld: -Bstatic
 #objdump: -d
 
-[^:]*:     file format elf32-.*arc
+[^:]*:\s+file format elf32-.*arc
 
 
 Disassembly of section \.text:
 
-00000100 <.*>:
- 100:	2730 7f80 0000 2014 	ld	r0,\[pcl,0x2014\].*
+[0-9a-f]+ <.*>:
+^\s+[0-9a-f]+:\s+2730\s7f80\s[0-9a-f]+\s[0-9a-f]+\s+ld\s+r\d+,\[pcl,.*
